--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@ background-color: rgb(211, 209, 208);
 
 .child{
     position: absolute;
-    height: 530px;
+    height: 520px;
     width: 290px;
     background-color: rgb(76, 75, 77);
-    bottom: 68px;
+    bottom: 60px;
     left: 50px;
     border-radius: 27px;
 }
@@ -20,9 +20,15 @@ background-color: rgb(211, 209, 208);
     height: 50px;
     width: 590px;
     background-color: rgb(76, 75, 77);
-    bottom: 546px;
+    bottom: 530px;
     left: 560px;
     border-radius: 10px;
+}
+
+h5{
+    font-style: italic;
+    letter-spacing: 0.20em;
+    
 }
 
 .child2{
